Logo de la coupe sur l'écran de lancement

--- a/qml.qrc
+++ b/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>logo.png</file>
+        <file>logo2020.png</file>
     </qresource>
 </RCC>
