--- a/qml.qrc
+++ b/qml.qrc
@@ -3,6 +3,6 @@
         <file>main.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>logo.png</file>
-        <file>logo2020.png</file>
+        <file>coupe.png</file>
     </qresource>
 </RCC>
